Employee-Management/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: employee-management
  labels:
    name: employee-management
    environment: production
