Employee-Management/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-management
  labels:
    app: employee-management
    tier: web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: employee-management
    tier: web
